Fixed 1st column overflow issue

--- a/style.css
+++ b/style.css
@@ -25,7 +25,8 @@ textarea {
 .col-menu {
     color: white;
     background-color: rgb(48, 41, 41);
-    padding-left: 24px;
+    padding-left: 22px;
+    padding-right: 36px;
 }
 .notification-col {
     background-color: gray;
@@ -38,6 +39,9 @@ textarea {
 }
 .options-list {
     font-size: 1.6em;
+    line-height: 2.2rem;
+    margin-top: 30px;
+    margin-bottom: 40px;
 }
 .row {
     height: 100%;
@@ -73,12 +77,12 @@ textarea {
 }
 
 #btn-compose {
-    font-size: 2em;
+    font-size: 1.5em;
     background-color: orange;
-    margin-top: 40px;
+    margin-top: 28px;
     margin-bottom: 50px;
-    margin-left: 16px;
-    margin-right: 30px;
+    margin-right: 400px;
+    max-width: 120px;
 }
 #search-icon {
     padding: 4px;
